--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,9 +1,4 @@
-
-Paste this:
-
-```yaml
 # .github/workflows/documentation.yml
-
 name: Deploy Documentation to GitHub Pages
 
 on:
@@ -25,7 +20,7 @@ jobs:
       - name: Upload documentation
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs   # folder we created
+          path: docs
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
