--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,6 +14,9 @@ permissions:
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout repository
@@ -25,7 +28,8 @@ jobs:
       - name: Upload documentation
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs
+          path: docs   # deploy /docs folder
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
